--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
     defaultConfig {
         minSdkVersion 11
         targetSdkVersion 19
+        testInstrumentationRunner "android.test.InstrumentationTestRunner"
     }
 
     buildTypes {
