--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,10 +43,11 @@
         </activity>
         <activity
             android:name="org.fashiontec.bodyapps.main.SettingsActivity"
-            android:label="@string/title_activity_seetings" >
+            android:label="@string/title_activity_settings" >
         </activity>
         <activity
             android:name="org.fashiontec.bodyapps.main.CreateActivity"
+            android:windowSoftInputMode="adjustResize"
             android:label="@string/title_activity_create" >
         </activity>
         <activity
@@ -55,6 +56,7 @@
         </activity>
         <activity
             android:name="org.fashiontec.bodyapps.main.MeasurementActivity$ItemActivity"
+            android:windowSoftInputMode="adjustPan"
             android:label="@string/title_activity_item" >
         </activity>
     </application>
