--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,7 +91,7 @@
         </activity>
         <activity
             android:name="org.fashiontec.bodyapps.main.MeasurementActivity$ItemActivity"
-            android:windowSoftInputMode="adjustPan"
+            android:windowSoftInputMode="stateVisible|adjustResize"
             android:label="@string/title_activity_item" >
         </activity>
     </application>
