--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,13 @@ before_script:
   - adb shell input keyevent 82 &
 
 script: ./gradlew connectedAndroidTest
+
+notifications:
+  webhooks:
+    urls:
+    https://webhooks.gitter.im/e/6967b4aa34219a8450e6
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
+
+
